force-app/main/default/objects/SBQQ__Quote__c/fields/Accept_URL__c.field-meta.xml
<CustomField>
    <fullName>Accept_URL__c</fullName>
    <label>Accept URL</label>
    <type>Url</type>
</CustomField>