force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Invoice_Contact__c</fullName>
    <formula>SBQQ__Account__r.Invoice_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Invoice Contact</label>
    <type>Text</type>
</CustomField>