force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Alias__c</fullName>
    <formula>SBQQ__Account__r.Owner.Alias</formula>
    <label>Account Owner Alias</label>
    <type>Text</type>
</CustomField>