force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Contact__c</fullName>
    <formula>SBQQ__Account__r.Primary_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Primary Contact</label>
    <type>Text</type>
</CustomField>