force-app/main/default/objects/SBQQ__Quote__c/fields/Allow_Quote_To_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Allow_Quote_To_Sales_Rep__c</fullName>
    <formula>SBQQ__Account__r.Allow_Quote_To_Sales_Rep__c</formula>
    <label>Allow Quote To Sales Rep</label>
    <type>Checkbox</type>
</CustomField>