force-app/main/default/objects/SBQQ__Quote__c/fields/Class_Full_Error__c.field-meta.xml
<CustomField>
    <fullName>Class_Full_Error__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Class Full Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>