force-app/main/default/objects/SBQQ__Quote__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Captures Client ID from Account.</description>
    <formula>SBQQ__Account__r.Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates Client ID from Account.</inlineHelpText>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>