force-app/main/default/objects/SBQQ__Quote__c/fields/Client_Id_Num__c.field-meta.xml
<CustomField>
    <fullName>Client_Id_Num__c</fullName>
    <label>Client_Id_Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>