force-app/main/default/objects/SBQQ__Quote__c/fields/Default_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Shipping_Method__c</fullName>
    <defaultValue>&quot;Standard Courier&quot;</defaultValue>
    <label>Default Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Courier</fullName>
                <default>true</default>
                <label>Standard Courier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>