force-app/main/default/objects/SBQQ__Quote__c/fields/Force_Credit_Card_Override__c.field-meta.xml
<CustomField>
    <fullName>Force_Credit_Card_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Credit Card Override</label>
    <type>Checkbox</type>
</CustomField>