force-app/main/default/objects/SBQQ__Quote__c/fields/Full_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Full_Quote_Number__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Quote Number</label>
    <type>Text</type>
</CustomField>