force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Valid_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Primary_Contact__c</fullName>
    <formula>SBQQ__Account__r.Id =  SBQQ__PrimaryContact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid Primary Contact</label>
    <type>Checkbox</type>
</CustomField>