force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Approve_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Approve_Email__c</fullName>
    <label>Last Approve Email</label>
    <type>DateTime</type>
</CustomField>