force-app/main/default/objects/SBQQ__Quote__c/fields/Lookup_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Account_Id__c</fullName>
    <formula>SBQQ__Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Account Id</label>
    <type>Text</type>
</CustomField>