force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_ID__c</fullName>
    <formula>SBQQ__Opportunity2__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account ID</label>
    <type>Text</type>
</CustomField>