force-app/main/default/objects/SBQQ__Quote__c/fields/Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone__c</fullName>
    <formula>Owner:User.Phone &amp; if (isblank(Owner:User.Extension), &quot;&quot;, &quot; x&quot; &amp; Owner:User.Extension)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Phone</label>
    <type>Text</type>
</CustomField>