force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup - Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Lookup - Primary Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>