force-app/main/default/objects/SBQQ__Quote__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Captures the client&apos;s purchase order number at the time of booking.</description>
    <inlineHelpText>Indicates the client&apos;s purchase order number at the time of booking.</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>