force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Age__c.field-meta.xml
<CustomField>
    <fullName>Quote_Age__c</fullName>
    <formula>NOW() - CreatedDate

/*If(
AND(NOT(ISBLANK(Approved_Date__c)), NOT(ISBLANK(Send_Date__c))),
Approved_Date__c - Send_Date__c,
IF(
NOT(ISBLANK(Send_Date__c)),
NOW() - Send_Date__c,
NOW() - CreatedDate
)
)
*/

/*
IF(
AND(NOT(ISBLANK(Approved_Date__c)), NOT(ISBLANK(Send_Date__c))),
Approved_Date__c - Send_Date__c,
NOW() - CreatedDate
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>