force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Quote_Billing_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Connects the Quote to the Account Address record to indicate the billing address. If selected, overrides the written down fields.</description>
    <inlineHelpText>Connects the Quote to the Account Address record to indicate the billing address. If selected, overrides the written down fields.</inlineHelpText>
    <label>Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Quotes (Billing Address)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>