force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Count__c</fullName>
    <label>REVISIT:Quote Line Count</label>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>