force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Quote_Payment_Terms__c</fullName>
    <formula>if( Force_Credit_Card_Override__c = true, &quot;Force Credit Card&quot;,
if ( Force_Invoice_Override__c = true, &quot;Force Invoice&quot;,
if (ispickval(SBQQ__Account__r.Quote_Payment_Terms__c, &apos;&apos;), &quot;Force Card Under Threshold&quot;, 
Text(SBQQ__Account__r.Quote_Payment_Terms__c)
)
)
)</formula>
    <label>Quote Payment Options</label>
    <type>Text</type>
</CustomField>