force-app/main/default/objects/SBQQ__Quote__c/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>