force-app/main/default/objects/SBQQ__Quote__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>IF(
OR(
 SBQQ__Ordered__c = true,
 NOT(ISBLANK(Send_Date__c))
),
&apos;CANNOT DELETE QUOTE!&apos;,
&apos;&apos;
)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>