force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ChangeVersion__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ChangeVersion__c</fullName>
    <description>The Amend: Re-Quote version number for the quote. It starts with 1 and the original quote will not have a value.</description>
    <inlineHelpText>The Amend: Re-Quote version number for the quote.</inlineHelpText>
    <label>Amend: Re-Quote Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>