force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DeliveryMethod__c</fullName>
    <description>Method used to deliver products on this quote.</description>
    <inlineHelpText>Method used to deliver products on this quote.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Shipping</fullName>
                <default>true</default>
                <label>No Shipping</label>
            </value>
            <value>
                <fullName>Standard Courier</fullName>
            </value>
            <value>
                <fullName>London Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>