force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__PreviousChangeQuote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PreviousChangeQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup referencing the previous version of the Amend Re-Quotes.</description>
    <inlineHelpText>The previous version of the Amend Re-Quotes.</inlineHelpText>
    <label>Previous Re-Quotes</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quotes (Amend Re-Quotes)</relationshipLabel>
    <relationshipName>PreviousChangeQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>