force-app/main/default/objects/SBQQ__Quote__c/fields/Send_Recipient_Result__c.field-meta.xml
<CustomField>
    <fullName>Send_Recipient_Result__c</fullName>
    <label>Send Result</label>
    <length>128</length>
    <type>Text</type>
</CustomField>