force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount__c</fullName>
    <description>Calculates to total Quote price as Net Amount + Tax + Shipping</description>
    <formula>SBQQ__NetAmount__c + Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>