force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Net_Amount_Without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount_Without_Tax__c</fullName>
    <formula>Total_Net_Amount__c - Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>