force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <description>Roll-up SUM of the Sales Tax of each Quote Line.</description>
    <label>Total Tax</label>
    <summarizedField>SBQQ__QuoteLine__c.Sales_Tax__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>