force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Weekend_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekend_Duration__c</fullName>
    <label>Total Weekend Duration</label>
    <summarizedField>SBQQ__QuoteLine__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Is_Weekend__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Delivery_Method__c</field>
        <operation>equals</operation>
        <value>On-site</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Course_Product_Line__c</field>
        <operation>notEqual</operation>
        <value>AE</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>