force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Approved_Quote.recordType-meta.xml
<RecordType>
    <fullName>Approved_Quote</fullName>
    <active>true</active>
    <description>Used to show quote is sent and awaiting client confirmation</description>
    <label>Approved Quote</label>
</RecordType>