force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Booked_Quote.recordType-meta.xml
<RecordType>
    <fullName>Booked_Quote</fullName>
    <active>true</active>
    <description>Quote has been confirmed by client and converted to an order</description>
    <label>Booked Quote</label>
</RecordType>