force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Expired_Quote.recordType-meta.xml
<RecordType>
    <fullName>Expired_Quote</fullName>
    <active>true</active>
    <description>If quote not approved by client in 30 days, quote will become expired</description>
    <label>Expired Quote</label>
</RecordType>