force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Pre_Approved_Quote.recordType-meta.xml
<RecordType>
    <fullName>Pre_Approved_Quote</fullName>
    <active>true</active>
    <description>Used to create initial Quotes</description>
    <label>Pre-Approved Quote</label>
</RecordType>