force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Rejected_Quote.recordType-meta.xml
<RecordType>
    <fullName>Rejected_Quote</fullName>
    <active>true</active>
    <description>If quote no longer needed by client it should be rejected</description>
    <label>Rejected Quote</label>
</RecordType>