force-app/main/default/objects/SBQQ__Quote__c/validationRules/Booked_Quote_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Booked_Quote_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
SBQQ__Ordered__c,
$Profile.Name!= &apos;OSG Sys Admin&apos;
)</errorConditionFormula>
    <errorMessage>Once the quote is approved and an order exists, changes can no longer be made on the quote!</errorMessage>
</ValidationRule>