force-app/main/default/objects/SBQQ__Quote__c/validationRules/Booked_Quote_Must_be_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Booked_Quote_Must_be_Primary</fullName>
    <active>true</active>
    <description>Quote cannot be marked as &quot;Booked&quot; without it being marked as &quot;Primary&quot;.</description>
    <errorConditionFormula>AND(
 SBQQ__Ordered__c  = true,
NOT(SBQQ__Primary__c)
)</errorConditionFormula>
    <errorMessage>You must mark the Quote as &quot;Primary&quot; in order to set the Status to &quot;Booked&quot;.</errorMessage>
</ValidationRule>