force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_Change_Force_Credit_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Force_Credit_Card</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Force_Credit_Card_Override__c ),
Force_Credit_Card_Override__c = false,
$UserRole.Name != &apos;System Admin&apos;,
$UserRole.Name != &apos;Accounting&apos;,
$UserRole.Name != &apos;Accounting and Operations Manager&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to (un)force credit card payment! Contact accounting</errorMessage>
</ValidationRule>