force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_Change_Quote_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Quote_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( RecordTypeId ),
 /*REJECTED QUOTE*/
 OR(
  PRIORVALUE( RecordTypeId) = &apos;0124p0000015Tuc&apos;,
  RecordTypeId!= &apos;0124p0000015Tuc&apos;
 ),
 /*EXPIRED QUOTE*/
 OR(
  PRIORVALUE( RecordTypeId) = &apos;0124p0000015Tuh&apos;,
  RecordTypeId!= &apos;0124p0000015Tuh&apos;
 ),
 /*BOOKED QUOTE*/
 OR(
  PRIORVALUE( RecordTypeId) = &apos;01246000000HDK8&apos;,
  RecordTypeId!= &apos;01246000000HDK8&apos;
 ),
 $Profile.Name &lt;&gt; &quot;OSG Sys Admin&quot;
)</errorConditionFormula>
    <errorMessage>Once a quote is in a final status (booked, expired, rejected) it cannot be changed!</errorMessage>
</ValidationRule>