force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cannot_Void_if_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Void_if_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Approved_Date__c)),
Voided__c = true,
$Profile.Name!= &apos;OSG Sys Admin&apos;
)</errorConditionFormula>
    <errorMessage>You cannot void an approved quote!</errorMessage>
</ValidationRule>