force-app/main/default/objects/SBQQ__Quote__c/validationRules/Force_Credit_Card_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Credit_Card_Override</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED( Force_Credit_Card_Override__c ),
Force_Credit_Card_Override__c = false,
$User.Id != &apos;00546000000uiEZ&apos;,
$User.Id != &apos;00546000002EH62&apos;,
$User.Id != &apos;00546000000urMD&apos;,
$User.Id != &apos;00546000000ufVc&apos;,
$User.Id != &apos;0054p000002c4Ad&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to un-force credit card! Speak to accounting.</errorMessage>
</ValidationRule>